# quackeccak

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: quackeccak_extension.cpp
src/abi/: selectors.cpp  selectors.hpp
src/create2/: create2.cpp
src/functions/: create2_functions.cpp  create2_mine.cpp  format_functions.cpp  hex_utils.cpp  keccak_functions.cpp  parse_utils.cpp
src/include/: create2_functions.hpp  create2_mine.hpp  create2_mine_data.hpp  format_functions.hpp  hex_utils.hpp  keccak_functions.hpp  keccak_wrapper.hpp  parse_utils.hpp  quackeccak_extension.hpp
src/keccak/: keccak.cpp  keccak.hpp  keccak_functions.cpp  keccak_functions.hpp  keccak_wrapper.hpp
src/types/: address.cpp  address.hpp  bytes32.cpp  bytes32.hpp  bytes4.cpp  bytes4.hpp  cross_casts.cpp  cross_casts.hpp  evm_types.cpp  evm_types.hpp  fixed_bytes_utils.hpp  uint256.cpp  uint265.hpp
test/forge/: foundry.toml
test/forge/script/: TestVectors.s.sol
test/sql/: create2.test  create2_functions.test  create2_mine.test  extension_loading.test  format_functions.test  keccak.test  keccak_functions.test
